--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -18,7 +18,7 @@
     color: white;
 }  */
  .header{
-    position: fixed;
+    position:sticky;
     top: 0;
     left: 0;
     right: 0;
