--- a/src/Components/Slider/slider.css
+++ b/src/Components/Slider/slider.css
@@ -57,7 +57,7 @@
 .prev,
 .next {
   cursor: pointer;
-  z-index: 100;
+  z-index: 1;
   position: absolute;
   top: 50%;
   width: auto;
